--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,5 @@ jobs:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
       - run: npm install
+      - run: npm run build
       - run: npm test
