--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "rollup": "^3.20.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
