--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "rollup": "^3.20.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-jest": "^29.0.5",
-    "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "tslib": "^2.5.0"
   }
 }
