--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onuhq/node",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -41,11 +41,10 @@
     "rollup": "^3.20.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-jest": "^29.0.5",
-    "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
-    "serverless-http": "^3.2.0"
+    "tslib": "^2.5.0"
   }
 }
